# sdl2_sidescroller_game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Debug/assets/: remove_background.py
headers/: game.h
include/: audio_manager.h  background.h  camera.h  collision.h  enemy.h  enemy_crab.h  entity.h  game.h  game_map.h  game_object.h  menu.h  player.h  projectile.h  statement_manager.h  test.h  texture_manager.h  tile.h  ui.h  vector2d.h
include/levels/: level1.h
source/: camera.cpp  collision.cpp  game.cpp  game_map.cpp  menu.cpp  player.cpp  test.cpp
vcpkg_install/: install.cmd  install.sh  pkg_install.cmd  pkg_install.sh
